Add Save as excel\

--- a/QLNS/Properties/Resources.resx
+++ b/QLNS/Properties/Resources.resx
@@ -114,4 +114,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SELLING_BOOK_WINDOW_HoanTatButton_Click_Excel_files____xlsx____xlsx" xml:space="preserve">
+    <value>Excel files (*.xlsx)|*.xlsx</value>
+  </data>
 </root>
